# djangx

./: .gitignore  README.md  pyproject.toml
.github/triggers/: publish.py  publish_on_tag_push.py
.github/workflows/: publish_on_tag_push.yaml
src/djangx/: __init__.py  apps.py  constants.py  enums.py  settings.py
src/djangx/api/: enums.py
src/djangx/api/settings/: databases.py  server.py  storages.py
src/djangx/app/: apps.py  urls.py
src/djangx/app/admin/: __init__.py  contactinfo.py  org.py  socialurls.py
src/djangx/app/models/: __init__.py  contactinfo.py  org.py  socialurls.py
src/djangx/app/templates/base/: default.html
src/djangx/app/templatetags/components/: contactinfo.py  org.py  social.py
src/djangx/app/templatetags/vendors/: __init__.py  tailwind_css.py  tailwindcss.py
src/djangx/contrib/base/static/base/css/: .gitignore
src/djangx/management/: __init__.py  cli.py  conf.py  context_processors.py  enums.py  manage.py  maps.py  urls.py
src/djangx/management/assets/startproject/home/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/djangx/management/assets/startproject/home/migrations/: __init__.py
src/djangx/management/assets/startproject/home/static/home/css/: source.css  tailwind.css
src/djangx/management/assets/startproject/home/templates/home/: index.html
src/djangx/management/backends/: __init__.py  auth.py  storages.py
src/djangx/management/backends/api/: __init__.py  asgi.py  wsgi.py
src/djangx/management/backends/server/: __init__.py  asgi.py  wsgi.py
src/djangx/management/backends/startproject/: __init__.py  storages.py
src/djangx/management/commands/: __init__.py  collectstatic.py  copy.py  generate.py  runbuild.py  runinstall.py  runserver.py  startproject.py  tailwind.py  tailwindcss.py
src/djangx/management/commands/generators/: file.py
src/djangx/management/commands/helpers/: art.py  run.py
src/djangx/management/conf/: __init__.py  _base.py  auth.py  base.py  generate.py  runcommands.py  security.py  server.py  tailwindcss.py
src/djangx/management/conf/appdef/: _mappings.py  installed_apps.py  middleware.py  templates.py
src/djangx/management/conf/startproject/: databases.py  storages.py
src/djangx/management/context_processors/: __init__.py  context_processors.py
src/djangx/management/definitions/appdef/: __init__.py  templates.py
src/djangx/management/definitions/startproject/: databases.py
src/djangx/management/enums/: __init__.py  appdef.py  apps.py  generate.py  startproject.py
src/djangx/management/enums/appdef/: __init__.py  installed_apps.py  middleware.py  templates.py
src/djangx/management/enums/startproject/: __init__.py  databases.py  presets.py
src/djangx/management/helpers/: art.py
src/djangx/management/mappings/: __init__.py  appdef.py  startproject.py
src/djangx/management/settings/: __init__.py  _conf.py  api.py  appdef.py  apps.py  auth.py  config.py  generate.py  internationalization.py  runcommands.py  security.py  server.py  startproject.py  storages.py  tailwind.py  tailwindcss.py
src/djangx/management/settings/appdef/: __init__.py  installed_apps.py  middleware.py  templates.py
src/djangx/management/settings/startproject/: __init__.py  databases.py  storages.py
src/djangx/management/types/: __init__.py  appdef.py  apps.py  auth.py  startproject.py  storages.py
src/djangx/management/typings/: __init__.py
src/djangx/management/typings/startproject/: __init__.py  storages.py
src/djangx/management/utils/: __init__.py  startproject.py
src/djangx/management/validators/: __init__.py
src/djangx/ui/: urls.py
src/djangx/ui/settings/: contactinfo.py  org.py  social.py
src/djangx/ui/types/: __init__.py  social.py
src/mock/: .gitignore  pyproject.toml
src/mock/home/: urls.py
src/mock/home/static/home/css/: tailwind.css
src/mock/home/templates/home/: index.html
src/tawala/: cli.py
src/tawala/api/settings/: storages.py
src/tawala/management/: urls.py
src/tawala/management/settings/: apps.py
src/tawala/scripts/: execute_from_user_project_dir.py
src/tawala/templates/default/: pyproject.toml
src/tawala/templates/default/config/: settings.py
