[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[project.urls]
homepage = "https://github.com/christianwhocodes/djangx#readme"
repository = "https://github.com/christianwhocodes/djangx"
issues = "https://github.com/christianwhocodes/djangx/issues"

[project.scripts]
djangx = "djangx.management.cli:main"
djx = "djangx.management.cli:main"

[project]
name = "djangx"
version = "1.5.8.dev3"
description = "Build and deploy Django apps with confidence."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kevin Wasike Wakhisi", email = "kevin@christianwhocodes.space" },
]
requires-python = ">=3.12"
dependencies = [
    "christianwhocodes>=1.3.2",
    "django>=6.0.2",
    "django-browser-reload>=1.21.0",
    "django-http-compression[brotli]>=1.2.0",
    "django-minify-html>=1.14.0",
    "django-phonenumber-field[phonenumberslite]>=8.4.0",
    "django-watchfiles>=1.4.0",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pillow>=12.1.0",
    "psycopg[binary,pool]>=3.3.2",
    "ruff>=0.15.0",
    "vercel>=0.3.8",
]

# [tool.uv.sources]
# christianwhocodes = { path = "../christianwhocodes", editable = true }

[tool.djlint]
profile = "django"
ignore = "H016,H030,H031"
blank_line_before_tag = "block"
blank_line_after_tag = "load,extends,endblock"

[tool.ruff]
line-length = 101

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
