[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[project.urls]
homepage = "https://github.com/christianwhocodes/djangx#readme"
repository = "https://github.com/christianwhocodes/djangx"
issues = "https://github.com/christianwhocodes/djangx/issues"

[project.scripts]
djangx = "djangx.management.manage:main"
djx = "djangx.management.manage:main"

[project]
name = "djangx"
version = "1.6.2.dev1"
description = "Build and deploy Django apps with confidence."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kevin Wasike Wakhisi", email = "kevin@christianwhocodes.space" },
]
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "christianwhocodes>=1.5.0.post3",
    "django>=6.0.2",
    "django-browser-reload>=1.21.0",
    "django-http-compression[brotli]>=1.2.0",
    "django-minify-html>=1.14.0",
    "django-phonenumber-field[phonenumberslite]>=8.4.0",
    "django-watchfiles>=1.4.0",
    "pillow>=12.1.1",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "psycopg[binary,pool]>=3.3.3",
    "ruff>=0.15.2",
    "ty>=0.0.18",
    "vercel>=0.5.0",
]

[tool.djlint]
profile = "django"
ignore = "H016,H030,H031"
# blank_line_before_tag = "block"
# blank_line_after_tag = "load,extends,endblock"

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["D"]
ignore = ["D203", "D213"] # Resolve the conflicts

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
