[project]
name = "djangx-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.0",
    "psycopg[binary,pool]>=3.3.2",
    "djangx>=1.5.6",
    "vercel>=0.3.8",
]

[dependency-groups]
dev = ["djlint>=1.36.4", "ruff>=0.15.0"]

[tool.djlint]
blank_line_before_tag = "block"
blank_line_after_tag = "load,extends,endblock"

[tool.djangx]
